# axis

./: Makefile.am  Makefile.in  ascii.c  axis.1  axis.aux  axis.c  axis.doc  axis.dvi  axis.h  axis.tex  config.c  configure  configure.ac  digit.c  g_to_ugs.c  index.html  lowlevel.c  params.json  psplot.c  psplot.pro.include  psutil.c  transcript.h  ugs_strokes.c  unix_to_ugs.c  xplot.1  xplot.c
config/CVS/: Entries  Repository
