AC_INIT(axis,1.0,edwards@jlab.org)

AC_CONFIG_AUX_DIR(config)

dnl Initialise automake
AM_INIT_AUTOMAKE
dnl
dnl
dnl --with-xxxx and --enable-xxxx switches 
dnl

AC_PROG_CC(gcc cc)

#######################
# Produce output
#######################

#
# Set up the doxygen file
# Substitute the right directories
#
# AC_CONFIG_FILES(docs/axisdoc)

#
# Generate makefiles
#
AC_CONFIG_FILES(Makefile)

#
# Finish
#
AC_OUTPUT

